# arr-mcp

./: .bumpversion.cfg  .env.example  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  a2a.json  compose.yml  debug.Dockerfile  fix_mcp_server.py  generate_mcp.py  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  patch_gen.py  patch_gen_script.py  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  test_gen.py
.specify/reports/: code_enhancement_report.md  results.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
arr_mcp/: __main__.py  agent.py  agent_server.py  arr_agent.py  arr_mcp.py  auth.py  bazarr_agent.py  bazarr_api.py  bazarr_mcp.py  chaptarr_agent.py  chaptarr_api.py  chaptarr_mcp.py  graph_config.py  lidarr_agent.py  lidarr_api.py  lidarr_mcp.py  mcp.py  mcp_config.json  mcp_server.py  middlewares.py  prowlarr_agent.py  prowlarr_agent.py.bak  prowlarr_api.py  prowlarr_mcp.py  radarr_agent.py  radarr_api.py  radarr_mcp.py  seerr_agent.py  seerr_api.py  seerr_mcp.py  sonarr_agent.py  sonarr_api.py  sonarr_mcp.py  tool_tags.json  tools.py  utils.py
arr_mcp/agent/: CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  templates.py
arr_mcp/agent_data/: IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json  templates.py
arr_mcp/api/: api_client_bazarr.py  api_client_radarr.py  api_client_seerr.py  api_client_sonarr.py
arr_mcp/mcp/: __init__.py  mcp_bazarr.py  mcp_chaptarr.py  mcp_lidarr.py  mcp_prowlarr.py  mcp_radarr.py  mcp_seerr.py  mcp_sonarr.py
arr_mcp/prompts/: main_agent.json
arr_mcp/skills/arr-starter/: SKILL.md
arr_mcp/skills/bazarr-catalog/: SKILL.md
arr_mcp/skills/bazarr-history/: SKILL.md
arr_mcp/skills/bazarr-system/: SKILL.md
arr_mcp/skills/chaptarr-api-info/: SKILL.md
arr_mcp/skills/chaptarr-authentication/: SKILL.md
arr_mcp/skills/chaptarr-author/: SKILL.md
arr_mcp/skills/chaptarr-author-editor/: SKILL.md
arr_mcp/skills/chaptarr-author-lookup/: SKILL.md
arr_mcp/skills/chaptarr-backup/: SKILL.md
arr_mcp/skills/chaptarr-blocklist/: SKILL.md
arr_mcp/skills/chaptarr-book/: SKILL.md
arr_mcp/skills/chaptarr-book-editor/: SKILL.md
arr_mcp/skills/chaptarr-book-file/: SKILL.md
arr_mcp/skills/chaptarr-book-lookup/: SKILL.md
arr_mcp/skills/chaptarr-bookshelf/: SKILL.md
arr_mcp/skills/chaptarr-calendar/: SKILL.md
arr_mcp/skills/chaptarr-calendar-feed/: SKILL.md
arr_mcp/skills/chaptarr-catalog/: SKILL.md
arr_mcp/skills/chaptarr-command/: SKILL.md
arr_mcp/skills/chaptarr-config/: SKILL.md
arr_mcp/skills/chaptarr-custom-filter/: SKILL.md
arr_mcp/skills/chaptarr-custom-format/: SKILL.md
arr_mcp/skills/chaptarr-cutoff/: SKILL.md
arr_mcp/skills/chaptarr-delay-profile/: SKILL.md
arr_mcp/skills/chaptarr-development-config/: SKILL.md
arr_mcp/skills/chaptarr-disk-space/: SKILL.md
arr_mcp/skills/chaptarr-download-client/: SKILL.md
arr_mcp/skills/chaptarr-download-client-config/: SKILL.md
arr_mcp/skills/chaptarr-downloads/: SKILL.md
arr_mcp/skills/chaptarr-edition/: SKILL.md
arr_mcp/skills/chaptarr-file-system/: SKILL.md
arr_mcp/skills/chaptarr-health/: SKILL.md
arr_mcp/skills/chaptarr-history/: SKILL.md
arr_mcp/skills/chaptarr-host-config/: SKILL.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
scripts/: generate_api.py  validate_a2a_agent.py
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_arr_coverage.py  test_arr_mcp_brute_force_coverage.py  test_auth_coverage.py  test_concept_parity.py  test_init_dynamics.py  test_startup.py
usage/: index.html
(+420 files in other folders)
