[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arr-mcp"
version = "0.2.55"
description = "Arr Suite MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Genius", email = "genius@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23.2",
    "requests>=2.8.1",
    "urllib3>=2.2.2",
    "pydantic>=2.0.0"]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.31"]

agent = [
    "agent-utilities[agent,logfire]>=0.2.31"]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.31"]

[project.scripts]
arr-mcp = "arr_mcp.mcp_server:mcp_server"
arr-agent = "arr_mcp.agent_server:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
arr_mcp = ["mcp_config.json", "agent_data/**"]
