[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "arr-mcp"
version = "0.3.0"
description = "Arr Suite MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.10"
dependencies = [ "tree-sitter>=0.23.2", "requests>=2.8.1", "urllib3>=2.2.2", "pydantic>=2.0.0",]
[[project.authors]]
name = "Genius"
email = "genius@example.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.2.42",]
agent = [ "agent-utilities[agent,logfire]>=0.2.42",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.2.42",]
test = [ "pytest", "pytest-asyncio",]

[project.scripts]
arr-mcp = "arr_mcp.mcp_server:mcp_server"
arr-agent = "arr_mcp.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
arr_mcp = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
